      due to MySQL's "switching" of default nullability
      for TIMESTAMP columns. [ticket:1539]
      
- oracle
    - unit tests pass 100% with cx_oracle !

    - support for cx_Oracle's "native unicode" mode which does
      not require NLS_LANG to be set. Use the latest 5.0.2 or
      later of cx_oracle.

    - an NCLOB type is added to the base types.
    
    - added native INTERVAL type to the dialect.  This supports
      only the DAY TO SECOND interval type so far due to lack 
      of support in cx_oracle for YEAR TO MONTH. [ticket:1467]
      
    - usage of the CHAR type results in cx_oracle's 
      FIXED_CHAR dbapi type being bound to statements.
      
    - the Oracle dialect now features NUMBER which intends
      to act justlike Oracle's NUMBER type.  It is the primary
      numeric type returned by table reflection and attempts
      to return Decimal()/float/int based on the precision/scale
      parameters.  [ticket:885]
      
    - func.char_length is a generic function for LENGTH

    - ForeignKey() which includes onupdate=<value> will emit a
      warning, not emit ON UPDATE CASCADE which is unsupported
      by oracle

    - the keys() method of RowProxy() now returns the result
      column names *normalized* to be SQLAlchemy case
      insensitive names. This means they will be lower case for
      case insensitive names, whereas the DBAPI would normally
      return them as UPPERCASE names. This allows row keys() to
      be compatible with further SQLAlchemy operations.

    - using new dialect.initialize() feature to set up
      version-dependent behavior.
    
    - using types.BigInteger with Oracle will generate
      NUMBER(19) [ticket:1125]
    
    - "case sensitivity" feature will detect an all-lowercase
      case-sensitive column name during reflect and add 
      "quote=True" to the generated Column, so that proper
      quoting is maintained.
      
- firebird
    - the keys() method of RowProxy() now returns the result